# mumbai-rent-mispricing

./: .gitignore  CONTRIBUTING.md  HARDENING_LOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  frontend.yml
data/api/: README.md  meta.json  transit.json
data/processed/: data_quality_report.md  dedup_report.md  snapshot_report.md  validation_report.md
db/: DATA_DICTIONARY.md  schema.sql
docs/: index.html
docs/api/: arbitrage_summary.json  index.json  locality_mispricing.json  meta.json
frontend/: .gitignore  .size-limit.json  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/[locality]/: opengraph-image.tsx  page.tsx
frontend/app/method/: page.tsx
frontend/features/dossier/: CarryPanel.tsx  CompositionStrip.tsx  ConfidenceNote.tsx  DossierFooter.tsx  DossierHeader.tsx  DossierPanel.tsx  SpreadBar.tsx
frontend/features/horizon/: HeroCopy.tsx  HorizonStage.tsx  ScrollActs.tsx
frontend/features/line/: TheLine.tsx
frontend/features/number/: NumberFlowValue.tsx
frontend/features/provenance/: ProvenanceChip.tsx
frontend/features/skyline/: PeakTag.tsx  SkylineField.tsx
frontend/features/verdict/: VerdictBadge.tsx  VerdictHeadline.tsx
frontend/scripts/: build-tokens.ts  validate-contract.ts
frontend/styles/: globals.css  tokens.css
src/rentlens/: pipeline.py  schema.py
tests/: test_api_export.py  test_clean.py  test_dedup.py  test_model.py  test_schema.py  test_schema_canonical.py  test_scrape.py  test_snapshots.py  test_validate.py  test_viz.py
(+24 files in other folders)
